Apply local variable type inference